--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -1,3 +1,15 @@
 .Auth {
   display: block;
+  .auth-page-dog {
+    width: 100%;
+    position: relative;
+  }
+  .auth-button {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 40%;
+  }
 }
