--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,11 @@ body {
   background-color: aliceblue;
   font-family: 'DM Serif Display', serif;
 }
+
+.header {
+  margin: 1em;
+  padding-bottom: .5em;
+  border-bottom: .1em solid black;
+  text-shadow: 3px 2px 0px lightblue;
+  box-shadow: 0px 5px 5px lightblue;
+}
