--- a/src/components/Walks/Walks.scss
+++ b/src/components/Walks/Walks.scss
@@ -1,14 +1,24 @@
 .Walks {
   .dog-banner {
+    max-width: 100%;
     position: relative;
-    height: 22em;
+    height: auto;
   }
   .walk-header {
     position: absolute;
-    font-size: 3em;
-    top: 6.5em;
-    left: 1em;
-    width: 100%;
+    font-size: 2em;
+    top: 4em;
+    left: 6.5em;
     text-shadow: 3px 3px 3px grey;
+    @media (min-width: 768px) {
+      font-size: 2.5em;
+      top: 3.5em;
+      left: 10em;
+    }
+        @media (min-width: 992px) {
+      font-size: 3em;
+      top: 4.5em;
+      left: 13em;
+    }
   }
 }
